Tweak Appearance Of Application

--- a/static/stylesheets/index.css
+++ b/static/stylesheets/index.css
@@ -1,57 +1,66 @@
-/* body {
-  background: #f3f1f2;
-  font-family: sans-serif;
+body {
+	background: #f3f1f2;
+	font-family: sans-serif;
 }
 
 #application {
-	margin: 5vh;
+	margin: 10px;
 }
 
 #application .ql-snow.ql-toolbar {
-  display: block;
-  background: #eaecec;
-  border-top-left-radius: 0.5em;
-  border-top-right-radius: 0.5em;
+	display: block;
+	background: #eaecec;
+	border-top-left-radius: 0.5em;
+	border-top-right-radius: 0.5em;
 }
 
 #application .ql-editor {
-  height: 18em;
+	/* height: 18em; */
 }
 
 #application .ql-container {
-  border-bottom-left-radius: 0.5em;
-  border-bottom-right-radius: 0.5em;
-  background: #fefcfc;
-} */
+	border-bottom-left-radius: 0.5em;
+	border-bottom-right-radius: 0.5em;
+	background: #fefcfc;
+}
 html, body {
-  height: 100%;
-  width: 100%;
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-  overflow: hidden;
+	height: 100%;
+	width: 100%;
+	box-sizing: border-box;
+	margin: 0;
+	padding: 0;
+	overflow: hidden;
 }
 #application {
-  height: 100%;
-  box-sizing: border-box;
+	height: 100%;
+	box-sizing: border-box;
 }
 .container {
-  height: 100%;
-  box-sizing: border-box;
+	height: 100%;
+	box-sizing: border-box;
 }
 .quill {
-  height: 100%;
-  box-sizing: border-box;
-  width: calc(100% - 300px);
-  float: left;
+	height: 100%;
+	box-sizing: border-box;
+	width: calc(100% - 300px);
+	float: left;
 }
 .ql-container {
-  box-sizing: border-box;
-  height: calc(100% - 42px);
-  overflow-y: scroll;
+	box-sizing: border-box;
+	height: calc(100% - 20px);
 }
 .ql-editor {
-  cursor: text;
+	cursor: text;
+	height: calc(100% - 20px);
+}
+.MuiList-root {
+	background: white;
+	height: 100%;
+	border-bottom-left-radius: 0.5em;
+	border-bottom-right-radius: 0.5em;
+}
+.MuiListItemText-root {
+	/* background-color: red !important; */
 }
 .MuiListItem-root.Mui-selected {
   background-color: #d4d8e8 !important;
